hphp/hack/test/typecheck/shape/shape_idx_optional_field_with_nullable_default_return.php.exp
File "shape_idx_optional_field_with_nullable_default_return.php", line 8, characters 10-39:
Invalid return type (Typing[4110])
File "shape_idx_optional_field_with_nullable_default_return.php", line 7, characters 4-6:
This is an int
File "shape_idx_optional_field_with_nullable_default_return.php", line 6, characters 3-6:
It is incompatible with a nullable type
